manifests/cloudflare/cloudflare-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "192.168.3.50"
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-subdomains-gateway
      hostname: "*.artdevldn.co.uk"
      tls:
        certificateRefs:
          - kind: Secret
            name: cloudflare-cert
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: "artdevldn.co.uk"
      tls:
        certificateRefs:
          - kind: Secret
            name: cloudflare-domain-cert
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      name: http-subdomains-gateway
      port: 80
      hostname: "*.artdevldn.co.uk"
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      name: http-domain-gateway
      port: 80
      hostname: "artdevldn.co.uk"
      allowedRoutes:
        namespaces:
          from: All    
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-app-route-1
spec:
  parentRefs:
  - name: cilium-gateway
  hostnames:
  - "console.artdevldn.co.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: redpanda-console
      namespace: redpanda-ns
      port: 8080
